# minesweeper-sveltekit

./: README.md  package.json  pnpm-lock.yaml  vite.config.ts
src-rust/: Cargo.toml
src-rust/src/: game.rs  lib.rs  random.rs
src/routes/: +page.svelte  Field.svelte  Subtitles.svelte  stores.ts
