[package]
name = "minesweeper-sveltekit-wasm"
authors = ["Matthew Mousseau"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.8", features = ["js"] }
gloo = "0.8.0"
implicit-clone = "0.3.5"
js-sys = "0.3.60"
rand = "0.8.5"
wasm-bindgen = "0.2.83"

[dependencies.web-sys]
version = "0.3.60"
